adding images and updating the event gallery

--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -7,7 +7,7 @@
     </div>
 
    
-        <div class="container-fluid contact_hero text-start">
+        <div class="container-fluid contact_hero text-start my-3 py-3">
             <div class="row p-5">
                 <div class="col-md-6">
                     <div class="py-3">
@@ -26,7 +26,7 @@
                             <div class="col-lg-6 py-4">   
                                 <i class="fa-regular fa-envelope contact-icon"></i>
                                 <p><strong>Email us at: </strong></p>  
-                                <p>info@StreetKidscan.com</p> 
+                                <p>streetkidscan@gmail.com</p> 
                             </div>
 
                             <div class="col-lg-6 py-4">  
