--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -160,10 +160,11 @@
           <h2>Leadership</h2>
         <div>
         <div>
-          <div class="leadership-image mx-auto"></div>
+          <div> 
+            <img class="leadership-image mx-auto" src="/static/images/OYINDA HEADSHOT 2023.jpg" alt="headshot Oyinda Kazeem">
+          </div>
           <h5 class="mt-2 p-1">Oyinda Kazeem</h5>
           <p>Founder</p>
-          <p>short text about the person. this should take about 3 lines</p>
         </div>
     </section>
 
@@ -172,62 +173,59 @@
       <h2>Advisory Board</h2>
 
       <div class=" container-fluid py-2 row g-5">
+
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Omolara Fausat Olanrewaju</h5>
+          <h5 class="mt-2 p-1">Moni Onikoro</h5>
           <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
         </div>
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Oyinkansola Edet </h5>
           <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
         </div>
       
 
-        <div class="col-lg-3 col-sm-4">
+        <!-- <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Tomi Odunsi</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
-        </div>
+        </div> -->
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Yemi Afariogun</h5>
+          <h5 class="mt-2 p-1">Adebayo Kazeem</h5>
           <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-sm-4">
+        <!-- <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Jokotola Edu</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
-        </div>
+        </div> -->
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Femi Williams</h5>
           <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
         </div>
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Ibrahim Onikoro</h5>
+          <h5 class="mt-2 p-1">Omolara Fausat Olanrewaju</h5>
           <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-sm-4">
+        
+        <!-- <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">The Treasurer</h5>
           <p>Treasurer</p>
           <p>short text about the person. this should take about 3 lines</p>
-        </div>
+        </div> -->
       </div>
     </section>
     
