--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -45,40 +45,34 @@
       <h1 class="my-2 p-2">Our Programs</h1>
 
       <div id="carouselExampleAutoplaying" class="carousel slide pt-2" data-bs-ride="carousel" data-bs-interval="2000">
-        <div class="carousel-inner">
+        <div class="carousel-inner d-flex align-items-center">
           <div class="carousel-item active c-item">
-            <!-- <img src="/static/images/counselling.jpg" class="d-block w-100 c-image" alt="Mobile Learning Image"> -->
+            <div class="carousel-caption text-body ">
+              <h4><strong>Mobile Learning Outreach</strong> </h4>
+              <p>Children will be able to attend our mobile schools, where they will be engaged by volunteers in exracurricular activities to aid self development.</p>
+              <a href="{% url 'mobile_learning' %}">See more...</a>
+            </div>
+          </div>
+
+          <div class="carousel-item c-item">
             <div class="carousel-caption text-body">
-              <h5>Mobile Learning Outreach</h5>
-              <p>Some quick example text to build on the card title and make up
-                        the bulk of the card's content.</p>
-              <a href="{% url 'mobile_learning' %}" class="card-link">See more...</a>
+              <h4><strong>Mentoring & Counselling</strong></h4>
+              <p>Our mentoring and counselling program seeks to provide support to the kids through qualified and licensed counsellors and therapists.</p>
+              <a href="{% url 'mentoring_counselling' %}">See more...</a>
             </div>
           </div>
           <div class="carousel-item c-item">
-            <!-- <img src="/static/images/holding hands.jpg" class="d-block w-100 c-image" alt="..."> -->
+            <!-- <img src="/static/images/reintegration_image.jpg" class="d-block c-image" alt="placement_reintegration image"> -->
             <div class="carousel-caption text-body">
-              <h5>Mentoring & Counselling</h5>
-              <p>Some quick example text to build on the card title and make up
-                        the bulk of the card's content.</p>
-              <a href="{% url 'mentoring_counselling' %}" class="card-link">See more...</a>
+              <h4><strong>Placement and Reintegration</strong> </h4>
+              <p>This program is designed to make work opportunities available to participants based on their talents and interests. </p>
+              <a href="{% url 'placement_reintegration' %}" >See more...</a>
             </div>
           </div>
           <div class="carousel-item c-item">
-            <!-- <img src="/static/images/Learning.jpg" class="d-block w-100 c-image" alt="..."> -->
             <div class="carousel-caption text-body">
-              <h5>Placement and Reintegration</h5>
-              <p>Some quick example text to build on the card title and make up
-                        the bulk of the card's content.</p>
-              <a href="{% url 'placement_reintegration' %}" class="card-link">See more...</a>
-            </div>
-          </div>
-          <div class="carousel-item c-item">
-            <!-- <img src="/static/images/kids holding hands.jpg" class="d-block w-100 c-image" alt="..."> -->
-            <div class="carousel-caption text-body">
-              <h5>Community Support</h5>
-              <p>Some quick example text to build on the card title and make up
-                        the bulk of the card's content.</p>
+              <h4><strong>Community Support</strong> </h4>
+              <p>Our commnuity support programs ensures that these kids have access to basic amenities and medical care.</p>
               <a href="{% url 'community_support' %}" class="card-link">See more...</a>
             </div>
           </div>
@@ -99,11 +93,11 @@
 
     <section id="home-donations" class="yellow-section pt-5 pb-5">
       <h1>Donations</h1>
-      <p>
+      <!-- <p>
         Thanks to your generosity, we have received a total of N000,000,000 in
         donations which have gone towards the execution of XYZ.
-      </p>
-      <h3>If you would like to donate kindly click the button below.</h3>
+      </p> -->
+      <h3>If you would like to make a donation kindly click the button below.</h3>
       <a class="btn btn-bg btn-color btn-lg m-4" href="{% url 'donate' %}" role="button">Make a donation</a>
      
     </section>
@@ -113,12 +107,14 @@
         <h2>Our Sponsors Include:</h2>
         <div class="container-fluid">
           <div class="row gap-5 d-flex justify-content-center">
+            
+              <img class="sponsor-image" src="/static/images/hadiya-logo-full-colour-rgb (3).png" alt="">
+          
+            <!-- <div class="sponsor-image col-md-3"></div>
             <div class="sponsor-image col-md-3"></div>
             <div class="sponsor-image col-md-3"></div>
             <div class="sponsor-image col-md-3"></div>
-            <div class="sponsor-image col-md-3"></div>
-            <div class="sponsor-image col-md-3"></div>
-            <div class="sponsor-image col-md-3"></div>
+            <div class="sponsor-image col-md-3"></div> -->
           </div>
         </div>
     </section>
