--- a/my_pages_app/templates/programs_learning.html
+++ b/my_pages_app/templates/programs_learning.html
@@ -16,8 +16,57 @@
     <h1>GALLERY</h1>
 </div>
 
-<!-- modal -->
 
+
+<div class="container-fluid" id="event">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Event Name.</h5>
+              <p class="card-text">Brief description of what the event was about. </p>
+            </div>
+            <a href=""> View Photos.</a>
+            <div class="card-footer">
+                <small class="text-muted">Date of Event.</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Event Name</h5>
+              <p class="card-text">Brief Description of event.</p>
+            </div>
+            <a href=""> View Photos.</a>
+            <div class="card-footer">
+                <small class="text-muted">Date of Event.</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+              <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Event Name</h5>
+                <p class="card-text">Brief Description of event.</p>
+              </div>
+              <a href=""> View Photos.</a>
+              <div class="card-footer">
+                  <small class="text-muted">Date of Event.</small>
+              </div>
+            </div>
+          </div>
+      </div>
+
+
+
+</div>
+
+
+<!-- modal -->
 <div class="container-fluid row" id="gallery" data-bs-toggle="modal" data-bs-target="#exampleModal">
     <div class="col-12 col-sm-6 col-lg-3 py-2" >
       <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="0">
