ensuring the latest version is saved

--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -100,9 +100,10 @@
     </p>
   </div>
 
-  <a class="btn btn-bg btn-color mt-4" href="{% url 'partner_with_us' %}" role="button"
+  <a class="btn btn-bg btn-color mt-4" href="https://form.jotform.com/230354751657358" target="_blank" role="button"
     >Become a Partner</a
   >
+
 </div>
 
 {% endblock %}
