--- a/my_pages_app/templates/programs_learning.html
+++ b/my_pages_app/templates/programs_learning.html
@@ -13,10 +13,8 @@
 </div>
 
 <div>
-    <h1>GALLERY</h1>
+    <h1>EVENTS</h1>
 </div>
-
-
 
 <div class="container-fluid" id="event">
     <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -27,7 +25,7 @@
               <h5 class="card-title">Event Name.</h5>
               <p class="card-text">Brief description of what the event was about. </p>
             </div>
-            <a href=""> View Photos.</a>
+            <a href="{% url 'gallery' %}"> View Photos.</a>
             <div class="card-footer">
                 <small class="text-muted">Date of Event.</small>
             </div>
@@ -38,9 +36,9 @@
             <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Event Name</h5>
-              <p class="card-text">Brief Description of event.</p>
+              <p class="card-text">Brief description of what the event was about.</p>
             </div>
-            <a href=""> View Photos.</a>
+            <a href="{% url 'gallery' %}"> View Photos.</a>
             <div class="card-footer">
                 <small class="text-muted">Date of Event.</small>
             </div>
@@ -51,87 +49,16 @@
               <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Event Name</h5>
-                <p class="card-text">Brief Description of event.</p>
+                <p class="card-text">Brief description of what the event was about.</p>
               </div>
-              <a href=""> View Photos.</a>
+              <a href="{% url 'gallery' %}"> View Photos.</a>
               <div class="card-footer">
                   <small class="text-muted">Date of Event.</small>
               </div>
             </div>
           </div>
       </div>
-
-
-
 </div>
-
-
-<!-- modal -->
-<div class="container-fluid row" id="gallery" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    <div class="col-12 col-sm-6 col-lg-3 py-2" >
-      <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="0">
-    </div>
-
-    <div class="col-12 col-sm-6 col-lg-3 py-2">
-      <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="1">
-    </div>
-
-    <div class="col-12 col-sm-6 col-lg-3 py-2">
-      <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="2">
-    </div>
-
-    <div class="col-12 col-sm-6 col-lg-3 py-2">
-      <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="3">
-    </div>
-
-</div>
-
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Photos</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-
-            <div class="modal-body">
-
-                <!-- carousel goes here -->
-
-                <div id="carouselExample" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" >
-                            <img src="/static/images/target2.jpg" class="d-block w-100"alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/static/images/target2.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/static/images/target2.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/static/images/target2.jpg" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
 
 
 
