--- a/my_pages_app/templates/programs_reintegration.html
+++ b/my_pages_app/templates/programs_reintegration.html
@@ -10,7 +10,53 @@
     <p>We believe in sustainable impact and development for street children and as such the placement and reintegration program is designed to ensure that all the street children who pass through our programs are armed with the right life and vocational skills to be able to thrive and live off the streets. We will work closely with public and private sector partners as well as SMEs to organize work placements for candidates who are deemed fit ready for reintegration by our volunteer counsellors and healthcare partners. Placements will be done based on interests and individual talents of each child to ensure that there is a good fit.</p>
 </div>
 
+
 <div>
-    <h1>GALLERY</h1>
+    <h1>EVENTS</h1>
 </div>
+
+<div class="container-fluid" id="event">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Event Name.</h5>
+              <p class="card-text">Brief description of what the event was about. </p>
+            </div>
+            <a href="{% url 'gallery' %}"> View Photos.</a>
+            <div class="card-footer">
+                <small class="text-muted">Date of Event.</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Event Name</h5>
+              <p class="card-text">Brief description of what the event was about.</p>
+            </div>
+            <a href="{% url 'gallery' %}"> View Photos.</a>
+            <div class="card-footer">
+                <small class="text-muted">Date of Event.</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+              <img class="w-100" src="/static/images/target2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Event Name</h5>
+                <p class="card-text">Brief description of what the event was about.</p>
+              </div>
+              <a href="{% url 'gallery' %}"> View Photos.</a>
+              <div class="card-footer">
+                  <small class="text-muted">Date of Event.</small>
+              </div>
+            </div>
+          </div>
+      </div>
+</div>
+
 {% endblock %}
