editing donate page

--- a/my_pages_app/templates/donate.html
+++ b/my_pages_app/templates/donate.html
@@ -13,13 +13,13 @@
 
   <hr>
 
-  <h3 class="mt-5"> <strong>Make a secure donation using one of the options below:</strong></h3>
+  <h3 class="mt-5"> <strong>Make a secure donation using the details below:</strong></h3>
   <p>Bank Name</p>
   <p>Account Name</p>
   <p>Account number</p>
 
-  <h3>OR</h3>
+  <!-- <h3>OR</h3>
   <p>Make a donation using our payment partner</p>
-  <a class="btn btn-bg btn-color" href="" role="button">Make a donation</a>
+  <a class="btn btn-bg btn-color" href="" role="button">Make a donation</a> -->
 </div>
 {% endblock %}
