style updates and deleting of unused images

--- a/my_pages_app/templates/footer.html
+++ b/my_pages_app/templates/footer.html
@@ -3,7 +3,7 @@
 <footer id="footer" class="py-5 px-5 my-5 container-fluid">
   <div class="row justify-content-center">
     <div class="col-6 col-md-2 mb-3">
-      <h5><a href="#" style="color: #fff;">StreetKidsCan</a></h5>
+      <h6><a href="#" style="color: #fff;">StreetKidsCan</a></h6>
       <ul class="nav flex-column">
         <li class="nav-item mb-2">
           <a href="#" class="nav-link p-0 text-reset">Address</a>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="col-6 col-md-2 mb-3">
-      <h5>Related Links</h5>
+      <h6>Related Links</h6>
       <ul class="nav flex-column">
         <li class="nav-item mb-2">
           <a href="{% url 'whoweare' %}" class="nav-link p-0 text-reset"
@@ -47,8 +47,8 @@
     <div class="col-md-5 offset-md-1 mb-3">
       <form action="https://gmail.us8.list-manage.com/subscribe/post?u=c14fefcb2fe395f60e0e860bf&amp;id=f8f2a924bd&amp;f_id=00407be0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div id="mc_embed_signup_scroll">
-                <h5>Receive updates on upcoming events.</h5>
-                <p>Monthly digest of what's new and exciting from us.</p>
+                <h6>Receive updates on upcoming events and activities.</h6>
+               
 
                 <div class="mc-field-group">
                   <!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label> -->
