--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand col-sm-1" href="/" style="height: 60px;">
-        <img src="/static/images/street kids (2).png" alt="logo" style="width:100%; height:60px;">
+        <img src="/static/images/street kids (2).png" alt="logo" style="width:100%; height:60px;" class="img-grid">
       </a>
   
       <button
