--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -102,13 +102,13 @@
      
     </section>
 
-    <!-- sponsors -->
-    <section id="sponsors" class=" white-section pt-5" >
-        <h2>Our Sponsors Include:</h2>
+    <!-- partners -->
+    <section id="partners" class=" white-section pt-5" >
+        <h2>Our Partners Include:</h2>
         <div class="container-fluid">
           <div class="row gap-5 d-flex justify-content-center">
             
-              <img class="sponsor-image" src="/static/images/hadiya-logo-full-colour-rgb (3).png" alt="">
+              <img class="partners-image" src="/static/images/hadiya-logo-full-colour-rgb (3).png" alt="">
           
             <!-- <div class="sponsor-image col-md-3"></div>
             <div class="sponsor-image col-md-3"></div>
