--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -4,9 +4,8 @@
   <img src="/static/images/Volunteering.jpg" alt="" class="photo-image">
 </div>
 
-
-<div class="container-fluid">
-  <div class="mx-5 text-center border-bottom">
+<div class="px-4 text-center py-4">
+  <div class="col-lg-8 mx-auto pt-4 border-bottom">
     <h1>Who We Are Looking For</h1>
     <p>
       We are a volunteer led organisation and our ability to impact and achieve
@@ -19,14 +18,14 @@
 
 <div class="px-4 text-center yellow-section py-5">
   <div class="col-lg-8 mx-auto pt-4">
-    <h4 class="mb-5 mt-5">
+    <h4 class="mb-5 mt-3">
       If you would like to become a part of our community of volunteers around
       the world, please fill out the form below.
     </h4>
     <!-- row-cols-1 row-cols-md-2 -->
     <div class="row g-4">
       <div class="col-md-6">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">Adhoc Volunteers</h5>
             <p class="card-text">
@@ -39,7 +38,7 @@
       </div>
 
       <div class="col-md-6">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">Informal Educators</h5>
             <p class="card-text">
@@ -54,7 +53,7 @@
       </div>
 
       <div class="col-md-6">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">Mentors</h5>
             <p class="card-text">
@@ -67,7 +66,7 @@
       </div>
 
       <div class="col-md-6">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-body">
             <h5 class="card-title">Counsellors</h5>
             <p class="card-text">
@@ -90,8 +89,8 @@
   </div>
 </div>
 
-<div class="container-fluid">
-  <div class="px-5 mx-5 text-center">
+<div class="px-4 text-center py-4">
+  <div class="col-lg-8 mx-auto pt-2">
     <h3>Become a Partner</h3>
     <p>
       We welcome organisations who are looking to fulfil their CSR activities
