--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -5,7 +5,7 @@
     <div class="programs_item col-md-6 col-sm-12">
       <img src="/static/images/Volunteer Page.jpg" alt="" class="programs_image">
     </div>
-      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+      <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center" id="who_we_are">
           <h1>WHO WE ARE</h1>
       </div>
       
@@ -164,7 +164,7 @@
             <img class="leadership-image mx-auto" src="/static/images/OYINDA HEADSHOT 2023.jpg" alt="headshot Oyinda Kazeem">
           </div>
           <h5 class="mt-2 p-1">Oyinda Kazeem</h5>
-          <p>Founder</p>
+          <p>Founder, Street Kids Can</p>
         </div>
     </section>
 
@@ -176,56 +176,34 @@
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
+          <h5 class="mt-2 p-1">Omolara Olanrewaju</h5>
+          <p>Proprietress, Mollys Schools</p>
+        </div>
+
+        <div class="col-lg-3 col-sm-4">
+          <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Moni Onikoro</h5>
-          <p>Title</p>
+          <p>Executive Director, MOB Integrated Services</p>
         </div>
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Oyinkansola Edet </h5>
-          <p>Title</p>
+          <p>Digital Access Programme Officer, Commonwealth and Development Office</p>
         </div>
-      
-
-        <!-- <div class="col-lg-3 col-sm-4">
-          <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Tomi Odunsi</h5>
-          <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
-        </div> -->
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
           <h5 class="mt-2 p-1">Adebayo Kazeem</h5>
-          <p>Title</p>
-        </div>
-
-        <!-- <div class="col-lg-3 col-sm-4">
-          <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Jokotola Edu</h5>
-          <p>Title</p>
-          <p>short text about the person. this should take about 3 lines</p>
-        </div> -->
-
-        <div class="col-lg-3 col-sm-4">
-          <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Femi Williams</h5>
-          <p>Title</p>
+          <p>Head of West Africa, Convergence Partners</p>
         </div>
 
         <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">Omolara Fausat Olanrewaju</h5>
-          <p>Title</p>
+          <h5 class="mt-2 p-1">Olatunji Fafemi</h5>
+          <p>Trader, BCP Securities</p>
         </div>
 
-        
-        <!-- <div class="col-lg-3 col-sm-4">
-          <div class="leadership-image mx-auto"></div>
-          <h5 class="mt-2 p-1">The Treasurer</h5>
-          <p>Treasurer</p>
-          <p>short text about the person. this should take about 3 lines</p>
-        </div> -->
       </div>
     </section>
     
