--- a/my_pages_app/templates/programs.html
+++ b/my_pages_app/templates/programs.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid p-0 mt-0 yellow-section">
     <div class="row">
-        <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+        <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center" id="our_programs">
             <h1>OUR PROGRAMS</h1>
         </div>
         <div class="programs_item col-md-6 col-sm-12">
