commenting out images from programs page till needed

--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -104,7 +104,7 @@
 
     <!-- partners -->
     <section id="partners" class=" white-section pt-5" >
-        <h2>Our Partners Include:</h2>
+        <h2>Our Partners</h2>
         <div class="container-fluid">
           <div class="row gap-5 d-flex justify-content-center">
             
