--- a/my_pages_app/templates/programs_community.html
+++ b/my_pages_app/templates/programs_community.html
@@ -15,6 +15,8 @@
     <h1>EVENTS</h1>
 </div>
 
+<!-- to be written back when events are available -->
+<!-- 
 <div class="container-fluid" id="event">
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
@@ -57,6 +59,6 @@
             </div>
           </div>
       </div>
-</div>
+</div> -->
 
 {% endblock %}
