--- a/my_pages_app/templates/programs_counselling.html
+++ b/my_pages_app/templates/programs_counselling.html
@@ -19,7 +19,9 @@
     <h1>EVENTS</h1>
 </div>
 
-<div class="container-fluid" id="event">
+
+<!-- to be written back when events are available -->
+<!-- <div class="container-fluid" id="event">
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
@@ -61,6 +63,6 @@
             </div>
           </div>
       </div>
-</div>
+</div> -->
 
 {% endblock %}
