--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -16,9 +16,9 @@
           <li class="nav-item px-2">
             <a class="nav-link nav-text" href="{% url 'homepage' %}">Home</a>
           </li>
-          <li class="px-1">
-            <a href="{% url 'whoweare' %}" class="nav-link nav-text d-inline-block">Who We are</a>
-            <li class="nav-item dropdown">
+          <li class="nav-item px-2">
+            <a class="nav-link nav-text" href="{% url 'whoweare' %}" >Who We are</a>
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link nav-text dropdown-toggle d-inline-block" href=""  role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#mission_vision">Our Mission</a></li>
@@ -33,7 +33,7 @@
                 <hr>
                 <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#our_advisory_board">Advisory Board</a></li>
               </ul>
-            </li>
+            </li> -->
           </li>
         
           <li class="px-1">
