--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -122,7 +122,7 @@
               We envision our program will empower them
               and help them break away from generational poverty through provision of
               informal education and life skills that will prepare them for
-              sustainable development and a brighter
+              sustainable development and a brighter future.
             </p>
           </div>
         </div>
@@ -142,7 +142,7 @@
           <div class="col-md-6 text-start" style="text-align: justify;">
             <p>  We believe a positive self-image is at the core of street kids’ ability to successfully reintegrate into mainstream society. Unfortunately, the complex circumstances leading to these kids being on the streets often leaves them feeling unworthy. </p>
 
-            <p> As a result, our programs are designed to nurture and unlock the strengths and talents of each child to help them regain their self-esteem hopes about a brighter future. </p>
+            <p> As a result, our programs are designed to nurture and unlock the strengths and talents of each child to help them regain their self-esteem and hopes of a brighter future. </p>
 
             <p> Our programs are designed to facilitate self-discovery and nurture hidden talents through informal education and recreational activities. Children in our programs will spend time each week participating in activities varying from mobile learning to therapy and counselling sessions as well as vocational and skills acquisition programs based on their individual interests.</p>
 
