--- a/static/css/style.css
+++ b/static/css/style.css
@@ -201,9 +201,9 @@ color: #fff;
 
 /* volunteers */
 .partners-image{
-  height: 150px;
-  width: 150px;
-  border-radius: 100%;
+  height: 180px;
+  width: 180px;
+  /* border-radius: 100%; */
   background-color: #fff;
   /* border: 1px solid #0d8dbb; */
 }
